2008-07-01  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

PR fortran/36676
	* io/list_read.c (find_nml_name): Use eat_separator instead of eat_line.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@137334 138bc75d-0d04-0410-961f-82ee72b054a4