libgfortran/io/list_read.c
@@ -2922,8 +2922,8 @@ find_nml_name:
       goto find_nml_name;
     }
 
-  if (c == '!')
-    eat_line (dtp);
+  unget_char (dtp, c);
+  eat_separator (dtp);
 
   /* Ready to read namelist objects.  If there is an error in input
      from stdin, output the error message and continue.  */
